# chat-interface

./: .gitignore  CHANGELOG.md  Cargo.toml  DEBUGGING.md  README-TYPESCRIPT.md  README.md  REFACTORING.md  flake.nix  init.json  manifest.toml  test-build.sh  working.toml
assets/: README.md  TYPESCRIPT.md  app.js  bundle.js  cleanup.sh  index.html  package-lock.json  package.json  styles-updated.css  styles.css  tsconfig.json
assets/src/: app.js  index.js  index.ts  message-handler.js  message-handler.ts  state.js  state.ts  ui.js  ui.ts  websocket.js  websocket.ts
assets/src/components/: ChatWindow.js  ConversationList.js  MessageComposer.js  Settings.js
assets/src/services/: messageProtocol.js  websocket.js
assets/src/store/: conversations.js  index.js  messages.js  settings.js  ui.js
assets/src/types/: index.ts  ui.types.ts
assets/src/utils/: api.js  formatting.js  storage.js
src/: bindings.rs  lib.rs  protocol.rs  state.rs
static/: app.js  index.html  styles.css
wit/: world.wit
