[package]
name = "chat-interface"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
sha1 = "0.10.5"
hex = "0.4.3"
anthropic-types = "0.1.2"

[dependencies.wit-bindgen-rt]
features = ["bitflags"]
version = "0.39.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"


